Fix pipeline. Jacoco's latest release still does not support JDK 11, therefore I'm downgrading the project to java 1.8, otherwise no code coverage is generated.